--- a/css/styles.css
+++ b/css/styles.css
@@ -93,8 +93,23 @@ body {
 }
 
 .header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-shrink: 0;
   background: var(--white);
+}
+
+.container_section_one_logo{
+
+}
+  
+.container_section_one_nav{
+  display: flex;
+}
+
+.container_section_one_address{
+display: flex;
 }
 
 .section_one {
@@ -103,6 +118,10 @@ body {
 }
 
 .introduction_hero {
+  margin: 0 auto;
+  margin-bottom: 48px;
+  width: 496px;
+  height: 120px;
   color: var(--ultrawhite);
   font-weight: 700;
   text-align: center;
@@ -113,6 +132,8 @@ body {
 }
 
 .section_one_button {
+  margin: 0 auto;
+  text-align: center;
   font-family: Roboto, sans-serif;
   background-color: var(--iris);
   font-weight: 500;
@@ -144,6 +165,7 @@ body {
 }
 
 .section_two_paragraph {
+  max-width: 264px;
   color: var(--slate);
   font-family: 'Roboto';
   font-size: 16px;
@@ -160,6 +182,7 @@ body {
 }
 
 .section_three_name {
+  margin: 0 auto;
   color: var(--navyblue);
   text-align: center;
   font-family: 'Roboto';
@@ -198,6 +221,7 @@ body {
 }
 
 .section_four_name {
+  margin: 0 auto;
   color: var(--navyblue, #2e2f42);
   font-family: 'Roboto';
   font-size: 36px;
@@ -206,6 +230,7 @@ body {
   line-height: 1.11; /* 111.111% */
   letter-spacing: 0.72px;
   text-transform: capitalize;
+  text-align: center;
 }
 .section_four_title {
   color: var(--navyblue, #2e2f42);
