--- a/css/styles.css
+++ b/css/styles.css
@@ -286,7 +286,7 @@ display: flex;
   text-decoration: none;
 }
 
-.conteiner_footer_logo{
+.container_footer_logo{
   display: inline-block;
   margin-bottom: 16px;
 }
