--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,33 @@ body {
   color: #434455;
 }
 
+.link {
+  text-decoration: none;
+}
+
+.list {
+  list-style: none;
+}
+
+.header {
+  border-bottom: 1px solid #e7e9fc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  background: var(--white);
+}
+
+.container_header{
+  display: flex; 
+  width: 1158px; 
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .logo {
+  margin-right: 76px;
   color: var(--iris, #4d5ae5);
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -49,8 +75,19 @@ body {
   text-decoration: none;
 }
 
-.header_address {
-  font-style: normal;
+.nav{
+  display: flex;
+  align-items: center;
+}
+
+.header_main{
+  display: flex;
+  gap: 40px;
+}
+
+.header_main_nav{
+  padding-top: 24px; 
+  padding-bottom: 24px;
 }
 
 .address {
@@ -69,13 +106,11 @@ body {
   color: var(--ocean);
 }
 
-.link {
-  text-decoration: none;
+.header_address{
+  display: flex;
+  gap: 40px;
 }
 
-.list {
-  list-style: none;
-}
 .navigation {
   color: var(--navyblue);
   font-family: 'Roboto';
@@ -92,26 +127,9 @@ body {
   color: var(--ocean);
 }
 
-.header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-  background: var(--white);
-}
-
-.container_section_one_logo {
-}
-
-.container_section_one_nav {
-  display: flex;
-}
-
-.container_section_one_address {
-  display: flex;
-}
-
 .section_one {
+  padding-top: 188px; 
+  padding-bottom: 188px;
   flex-shrink: 0;
   background: var(--navyblue);
 }
@@ -119,8 +137,7 @@ body {
 .introduction_hero {
   margin: 0 auto;
   margin-bottom: 48px;
-  width: 496px;
-  height: 120px;
+  max-width: 496px;
   color: var(--ultrawhite);
   font-weight: 700;
   text-align: center;
@@ -131,6 +148,11 @@ body {
 }
 
 .section_one_button {
+  border-radius: 4px;
+  border: none;
+  height: 56px;
+  min-width: 169px;
+  display: block;
   margin: 0 auto;
   text-align: center;
   font-family: Roboto, sans-serif;
@@ -150,6 +172,8 @@ body {
 }
 
 .section_two {
+  padding-top: 120px;
+  padding-bottom: 120px;
   background: var(--white);
 }
 
@@ -172,6 +196,11 @@ body {
   font-weight: 400;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
+}
+
+.container_section_two_text{
+  display: flex;
+  gap: 24px;
 }
 
 .section_three {
@@ -285,7 +314,3 @@ body {
   text-decoration: none;
 }
 
-.container_footer {
-  display: inline-block;
-  margin-bottom: 16px;
-}
