--- a/css/styles.css
+++ b/css/styles.css
@@ -181,6 +181,7 @@ img{
 }
 
 .section_two_name {
+  margin-bottom: 8px;
   color: var(--navyblue);
   font-family: 'Roboto';
   font-size: 20px;
@@ -201,18 +202,37 @@ img{
   letter-spacing: 0.32px;
 }
 
+.container_section_two{
+ 
+}
+
 .container_section_two_text{
   display: flex;
   gap: 24px;
 }
 
+.list_section_two{
+width: calc((100%-72px) / 4 ) ;
+}
+
 .section_three {
+  padding: 120px 0;
   background: var(--cloud);
   flex-shrink: 0;
   background-color: var(--cloud);
 }
 
+.container_section_three{
+
+}
+
+.section_three_list{
+display: flex;
+gap: 24px;
+}
+
 .section_three_name {
+  margin-bottom: 72px;
   margin: 0 auto;
   color: var(--navyblue);
   text-align: center;
@@ -226,12 +246,19 @@ img{
 }
 
 .team_card_list_item {
+  border-radius: 0px 0px 4px 4px;
+  width: calc((100%-72px) / 4 ) ;
   background-color: var(--ultrawhite);
 }
 
+.section_three_h3_and_p{
+padding: 32px 0;
+}
+
 .team_name_card {
-  color: var(--navyblue);
+  margin-bottom: 8px;
   text-align: center;
+  color: var(--navyblue);
   font-family: 'Roboto';
   font-size: 20px;
   font-style: normal;
@@ -251,7 +278,18 @@ img{
   letter-spacing: 0.32px;
 }
 
+.section_four {
+  padding-bottom: 120px;
+  padding-top: 120px;
+  background: #fff;
+}
+
+.container_section_four{
+
+}
+
 .section_four_name {
+  margin-bottom: 72px;
   margin: 0 auto;
   color: var(--navyblue, #2e2f42);
   font-family: 'Roboto';
@@ -263,7 +301,26 @@ img{
   text-transform: capitalize;
   text-align: center;
 }
+
+.container_list_section_four{
+  row-gap: 48px;
+  column-gap: 24px;
+  flex-wrap: wrap;
+display: flex;
+}
+
+.section_four_list{
+width: calc((100%-48px) / 3 ) ;
+}
+
+.container_section_four_list{
+  border-top: none;
+  border: 1px solid #e7e9fc;
+padding: 32px 16px;
+}
+
 .section_four_title {
+  margin-bottom: 8px;
   color: var(--navyblue, #2e2f42);
   font-family: 'Roboto';
   font-size: 20px;
@@ -281,10 +338,6 @@ img{
   font-weight: 400;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
-}
-
-.section_four {
-  background: #fff;
 }
 
 .footer {
@@ -316,4 +369,3 @@ img{
   text-transform: uppercase;
   text-decoration: none;
 }
-
