--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,12 @@ img {
   display: block;
 }
 
+.container{
+max-width: 1158px;
+padding: 0 15px;
+margin: 0 auto;
+}
+
 .header {
   border-bottom: 1px solid #e7e9fc;
   display: flex;
@@ -257,11 +263,11 @@ img {
 
 .team_card_list_item {
   border-radius: 0px 0px 4px 4px;
-  width: calc((100%-72px) / 4);
+  flex-basis: calc((100% - 3 * 24px) / 4);
   background-color: var(--ultrawhite);
 }
 
-.section_three_h3_and_p {
+.section_three_team_card_info {
   padding: 32px 0;
 }
 
@@ -371,8 +377,6 @@ img {
 }
 
 .studio_footer {
-  margin-bottom: 16px;
-  display: inline-block;
   color: var(--cloud);
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -382,4 +386,9 @@ img {
   letter-spacing: 0.54px;
   text-transform: uppercase;
   text-decoration: none;
+}
+
+.link_footer{
+  margin-bottom: 16px;
+  display: inline-block;
 }
