--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,19 @@ body {
   color: #434455;
 }
 
+.visuallly-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .link {
   text-decoration: none;
 }
@@ -32,10 +45,10 @@ img {
   display: block;
 }
 
-.container{
-max-width: 1158px;
-padding: 0 15px;
-margin: 0 auto;
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
 
 .header {
@@ -388,7 +401,7 @@ margin: 0 auto;
   text-decoration: none;
 }
 
-.link_footer{
+.link_footer {
   margin-bottom: 16px;
   display: inline-block;
 }
