--- a/css/styles.css
+++ b/css/styles.css
@@ -236,6 +236,8 @@ img {
 }
 
 .container_section_two_text {
+  margin: 0;
+  padding: 0;
   list-style: none;
   display: flex;
   gap: 24px;
@@ -339,11 +341,13 @@ img {
 
 .section_four_list {
   width: calc((100% - 48px) / 3);
+  padding: 0;
+  margin: 0;
 }
 
 .container_section_four_list {
-  border-top: none;
   border: 1px solid #e7e9fc;
+  border-top: none;
   padding: 32px 16px;
 }
 
