--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,20 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
 :root {
   --iris: #4d5ae5;
   --navyblue: #2e2f42;
@@ -130,6 +147,10 @@ img {
 .address:hover,
 .address:focus {
   color: var(--ocean);
+}
+
+.address_hed{
+  margin-left: auto;
 }
 
 .header_address {
